--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -81,6 +81,21 @@ header .container{
     font-weight: bold;
 }
 
+
+
+
+.banner{
+    background: url(../ImagensIWI/ENIAC.jpg) no-repeat center/cover;
+    margin-top: 107px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #09092d;
+    font-size: 1.5em;
+
+}
+
 @media(max-width:920px){
     header .container{
         flex-direction: column;
@@ -92,6 +107,19 @@ header .container{
         flex-direction: column;
     }
 
+    .banner{
+        margin-top: 150px;
+    }
+
+}
+
+h2{
+    background-color: #26077a;
+    text-shadow:2px 2px 10px black;
+    color: #f2f6f0;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
 }
 
 .container{
