--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -91,13 +91,96 @@ header .container{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #09092d;
+    color:#f2f6f0;
     font-size: 1.5em;
+    flex-direction: column;
+}
+
+.banner h1{
+    text-shadow: 0 0 10px #26077a;
+    font-size: 50px;
+}
+
+.banner h2{
+    font-size: 30px;
+    text-shadow: 0 0 10px #000;
+}
+
+#historia{
+    padding: 35px;
+}
+
+.historia-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    max-width: 1400px;
+    margin: auto;
+
+}
+.historia-texto{
+    flex: 1;
+    padding: 20px;
+
+}
+
+.historia-texto p{
+    font-size: 1.3;
+    line-height: 1.5;
+    text-align: justify;
+    margin-top: 10px;
+}
+
+.historia-texto a{
+    color: #2838a3;
+    text-decoration: none;
+}
+    
+.historia-texto a:hover{
+    background-color: #2a60c9;
+    height: 20px;
+}
+
+.fonte{
+    font-size: 12px;
+}
+
+.hex-grid{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    flex: 1;
+}
+
+.hex{
+    width: 140px;
+    height: 120px;
+    clip-path: polygon(
+        30% 0%,   
+        70% 0%,   
+        100% 30%, 
+        100% 70%, 
+        70% 100%, 
+        30% 100%, 
+        0% 70%,   
+        0% 30%);
+    overflow: hidden;
+    position: relative;
+    flex-wrap: wrap;
+
+}
+
+.hex img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
 }
 
 @media(max-width:920px){
-    header .container{
+    header .container, .historia-container{
         flex-direction: column;
         text-align: center;
     }
@@ -113,7 +196,7 @@ header .container{
 
 }
 
-h2{
+main h1{
     background-color: #26077a;
     text-shadow:2px 2px 10px black;
     color: #f2f6f0;
