adicinando fonte e texto nas modais

--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -13,8 +13,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:Arial, sans-serif ;
     scroll-behavior: smooth;
+    font-family: "PT Serif", serif;
 
 }
 
