ajustando responsividade das modais

--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -326,7 +326,12 @@ header .container{
     section{
         scroll-margin-top: 90px;
     }
-    
+
+    .modal-content{
+        max-height: 300px;
+        max-width: 200px;
+    }
+
 
 }
 
