--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -20,7 +20,7 @@
 
 
 body{
-background-color:#e2e2e1;
+    background-color:#e2e2e1;
 }
 
 section{
@@ -110,6 +110,15 @@ header .container{
 .banner h2{
     font-size: 30px;
     text-shadow: 0 0 10px #000;
+}
+
+.centro{
+    background-color: #26077a;
+    text-shadow:2px 2px 10px black;
+    color: #f2f6f0;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
 }
 
 #historia{
@@ -283,10 +292,6 @@ header .container{
     font-size: 2px;
 }
 
-.modal-content a{
-    align-items:last baseline;
-}
-
 .card-modal h3{
     margin-top: 5px;
 }
@@ -305,6 +310,40 @@ header .container{
 
 .btn a{
     align-items: center;
+}
+
+#galeria .container .img-galeria{
+    background-color: #f2f6f0;
+    border: 1px solid #afafaf;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.2s ease, box-shadow 0.2s ease; 
+}
+
+#galeria .container{
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    padding: 50px 0; 
+    flex-wrap: wrap;
+}
+
+.coluna1, .coluna2{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+
+#galeria .img-galeria:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 16px #09092d75; 
+}
+
+.img-galeria{
+    max-width: 100%;
 }
 
 
@@ -328,23 +367,17 @@ header .container{
     }
 
     .modal-content{
-        max-height: 300px;
-        max-width: 200px;
+        width: 70vh;
+        height: 50vh;
+    }
+
+    .coluna1, .coluna2{
+        flex-direction: column;
     }
 
 
 }
 
-
-
-main h1{
-    background-color: #26077a;
-    text-shadow:2px 2px 10px black;
-    color: #f2f6f0;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: center;
-}
 
 .container{
     max-width: 1200px;
