--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -32,8 +32,8 @@ html{
 }
 
 footer{
-    background-color:#26077a;
-    color: whitesmoke;
+    text-shadow: 0 0 5px black;
+    text-align: center;
 }
 
 header{
@@ -87,6 +87,11 @@ header .container{
     font-weight: bold;
 }
 
+.logo a{
+    text-decoration: none;
+    color: #f2f6f0;
+}
+
 
 
 
@@ -102,13 +107,27 @@ header .container{
     flex-direction: column;
 }
 
-.banner h1{
+.banner_contato{
+    background: url(../ImagensIWI/banner_contato.jpg) no-repeat center/cover;
+    padding: 15px;
+    margin-top: 107px;
+    height: 400px;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    color:#f2f6f0;
+    font-size: 1.5em;
+    flex-direction: column;
+
+}
+
+#inicio h1{
     text-shadow: 0 0 10px #26077a;
     font-size: 50px;
 }
 
-.banner h2{
-    font-size: 30px;
+#inicio h2{
+    font-size: 25px;
     text-shadow: 0 0 10px #000;
 }
 
