--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -121,6 +121,56 @@ header .container{
 
 }
 
+.title_ctt{
+    text-align: center;
+    font-size: 1.5em;
+    padding: 1%;
+}
+
+.formulario-contato{
+    background-color: #fafafa;
+    border: 1px solid #afafaf;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 60%;
+    margin: auto;
+    justify-content: center;
+    text-align: left;
+}
+
+.dados-form{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    font-size: 1.2em;
+}
+
+.dados-form input,
+.dados-form select,
+.dados-form textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 1em;
+    margin-top: 8px;
+}
+
+.dados-form input[type="checkbox"],
+.dados-form input[type="radio"] {
+    margin-right: 8px;
+    margin-top: 0;
+}
+
+.dados-form label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input[type="range"] {
+    accent-color: #09092d; /* Muda a cor da barra e do botão nas versões modernas */
+}  
+
 #inicio h1{
     text-shadow: 0 0 10px #26077a;
     font-size: 50px;
