--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -129,11 +129,11 @@ header .container{
 
 .formulario-contato{
     background-color: #fafafa;
-    border: 1px solid #afafaf;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 60%;
+    max-width: 80%;
+    width: 100%;
     margin: auto;
     justify-content: center;
     text-align: left;
@@ -143,7 +143,8 @@ header .container{
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    
+    padding: 0.5%;
 }
 
 .dados-form input,
@@ -160,6 +161,9 @@ header .container{
 .dados-form input[type="radio"] {
     margin-right: 8px;
     margin-top: 0;
+   
+
+
 }
 
 .dados-form label {
@@ -168,7 +172,7 @@ header .container{
 }
 
 input[type="range"] {
-    accent-color: #09092d; /* Muda a cor da barra e do botão nas versões modernas */
+    accent-color: #09092d;
 }  
 
 #inicio h1{
