--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -31,11 +31,6 @@ html{
     scroll-behavior: smooth;
 }
 
-footer{
-    text-shadow: 0 0 5px black;
-    text-align: center;
-}
-
 header{
 
     color: #f2f6f0;
@@ -491,7 +486,7 @@ body.pg-mensagem main{
     border-collapse: collapse;
     font-size: 1em;
     background-color: #fafafa;
-    border-radius: 8px;
+    border-radius: 5px;
     overflow: hidden;
 }
 
@@ -499,7 +494,7 @@ body.pg-mensagem main{
 .tabela-eniac td{
     padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid rgba(0, 255, 224, 0.3);
+    border-bottom: 1px solid #26077a;
 }
 
 .tabela-eniac thead{
@@ -509,10 +504,15 @@ body.pg-mensagem main{
 }
 
 .tabela-eniac tbody tr:hover {
-    background-color: rgba(0, 255, 224, 0.1);
+    background-color: #2838a33a;
     transition: background-color 0.3s ease;
 }
 
 .tabela-eniac tbody tr:last-child td{
     border-bottom: none;
+}
+
+footer{
+    text-shadow: 0 0 5px black;
+    text-align: center;
 }
