jogo não terminado 2

--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -391,6 +391,7 @@ header .container{
     text-align: center;
     font-size: 1.5em;
     padding: 1%;
+    color: #09092d;
 }
 
 .formulario-contato{
