--- a/NovoSiteIWI/CssExternoNovoSite/style.css
+++ b/NovoSiteIWI/CssExternoNovoSite/style.css
@@ -513,6 +513,14 @@ body.pg-mensagem main{
     border-bottom: none;
 }
 
+.tabela-button{
+    padding: 2%;
+}
+
+.tabela-button .btn{
+    width: 100%;
+}
+
 footer{
     text-shadow: 0 0 5px black;
     text-align: center;
